--- a/FindModuleUSR/FindModuleUSR.csproj
+++ b/FindModuleUSR/FindModuleUSR.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{817B4E1C-9532-4EC6-96B9-2CE1F50311A0}</ProjectGuid>
+    <ProjectGuid>{F8806F92-2214-4CF3-85F0-41BFEC017C84}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FindEthernetModules</RootNamespace>
-    <AssemblyName>FindEthernetModules</AssemblyName>
+    <RootNamespace>FindModuleUSR</RootNamespace>
+    <AssemblyName>FindModuleUSR</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,20 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArpEntity.cs" />
-    <Compile Include="ArpHelper.cs" />
-    <Compile Include="DeviceScanner.cs" />
-    <Compile Include="FrmFindEthernetModules.cs">
+    <Compile Include="FrmFindModuleUSR.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmFindEthernetModules.Designer.cs">
-      <DependentUpon>FrmFindEthernetModules.cs</DependentUpon>
+    <Compile Include="FrmFindModuleUSR.Designer.cs">
+      <DependentUpon>FrmFindModuleUSR.cs</DependentUpon>
     </Compile>
-    <Compile Include="IpFinder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FrmFindEthernetModules.resx">
-      <DependentUpon>FrmFindEthernetModules.cs</DependentUpon>
+    <Compile Include="udpControl.cs" />
+    <EmbeddedResource Include="FrmFindModuleUSR.resx">
+      <DependentUpon>FrmFindModuleUSR.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -82,6 +79,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\UdpLibrary\UdpLibrary.csproj">
+      <Project>{9d554243-a977-4465-8d8c-0340cfe7960d}</Project>
+      <Name>UdpLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
