--- a/FindModuleUSR/FindDeviceUSR.csproj
+++ b/FindModuleUSR/FindDeviceUSR.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{817B4E1C-9532-4EC6-96B9-2CE1F50311A0}</ProjectGuid>
+    <ProjectGuid>{F8806F92-2214-4CF3-85F0-41BFEC017C84}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FindEthernetModules</RootNamespace>
-    <AssemblyName>FindEthernetModules</AssemblyName>
+    <RootNamespace>FindModuleUSR</RootNamespace>
+    <AssemblyName>FindModuleUSR</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,20 +46,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArpEntity.cs" />
-    <Compile Include="ArpHelper.cs" />
-    <Compile Include="DeviceScanner.cs" />
-    <Compile Include="FrmFindEthernetModules.cs">
+    <Compile Include="FrmServerUDP.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmFindEthernetModules.Designer.cs">
-      <DependentUpon>FrmFindEthernetModules.cs</DependentUpon>
+    <Compile Include="FrmServerUDP.Designer.cs">
+      <DependentUpon>FrmServerUDP.cs</DependentUpon>
     </Compile>
-    <Compile Include="IpFinder.cs" />
+    <Compile Include="UsrFunctions.cs" />
+    <Compile Include="FrmClientUDP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmClientUDP.Designer.cs">
+      <DependentUpon>FrmClientUDP.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmFindDeviceUSR.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmFindDeviceUSR.Designer.cs">
+      <DependentUpon>FrmFindDeviceUSR.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FrmFindEthernetModules.resx">
-      <DependentUpon>FrmFindEthernetModules.cs</DependentUpon>
+    <EmbeddedResource Include="FrmClientUDP.resx">
+      <DependentUpon>FrmClientUDP.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmFindDeviceUSR.resx">
+      <DependentUpon>FrmFindDeviceUSR.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmServerUDP.resx">
+      <DependentUpon>FrmServerUDP.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -82,6 +97,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FindEthernetModules\IpArpListFinder.csproj">
+      <Project>{817b4e1c-9532-4ec6-96b9-2ce1f50311a0}</Project>
+      <Name>IpArpListFinder</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UdpLibrary\UdpLibrary.csproj">
+      <Project>{9d554243-a977-4465-8d8c-0340cfe7960d}</Project>
+      <Name>UdpLibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UsrProtocol\UsrProtocol.csproj">
+      <Project>{f0039cb3-eb50-4ba3-939c-31dc81a7267f}</Project>
+      <Name>UsrProtocol</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
